@@ -1,8 +1,9 @@
 0.8.2
  - Add fluorescence crosstalk correction (#185)
  - Bugfixes:
+   - Regression: Session autosaving broken (#191)
    - Young's modulus not updated (dclab 0.2.9.dev9) (#190)
-   - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev13) (#189)
+   - UnicodeDecodeError on fcs-export (fcswrite 0.1.3.dev15) (#189)
    - Mouse cursor stuck in wait when plotting hierarchy data (#188)
  - Code cleanup:
    - Use the term "feature" consistently (dclab 0.2.9.dev2)
